# inception

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  copier.yaml  devenv.nix  pyproject.toml
.github/workflows/: release.yaml  release.yml  test.yml
includes/: README.release.md.jinja  base.nix.jinja  devenv.gitignore  devenv.rust.yaml  devenv.yaml  direnv.gitignore  go.gitignore  python.gitignore
src/inception/: __init__.py
template/Go/: .gitignore.jinja  devenv.nix.jinja
template/Go/.github/workflows/: test.yml
template/Node.js/: .editorconfig.jinja  .gitignore.jinja  devenv.nix.jinja  {{_copier_conf.answers_file}}.jinja
template/Node.js/.github/workflows/: test.yml
template/Python/: .editorconfig.jinja  .gitignore.jinja  .test.sh  devenv.yaml.jinja  pyproject.toml.jinja
template/Python/.github/workflows/: test.yml
template/Python/src/{{ project_name }}/: __init__.py.jinja
template/Rust/: .gitignore.jinja
template/Rust/.github/workflows/: test.yml
template/{% if language == 'Go' %}{{ project_name }}{% endif %}/: .gitignore  devenv.nix.jinja
template/{% if language == 'Node.js' %}{{ project_name }}{% endif %}/: .gitignore  devenv.nix.jinja
template/{% if language == 'Node.js' %}{{ project_name }}{% endif %}/.github/workflows/: test.yml
template/{% if language == 'Python' %}{{ project_name }}{% endif %}/: .gitignore  .test.sh  README.md.jinja  devenv.nix.jinja  pyproject.toml.jinja
template/{% if language == 'Rust' %}{{ project_name }}{% endif %}/: .gitignore  devenv.yaml.jinja  {{_copier_conf.answers_file}}.jinja
