[project]
name = "inception"
description = "Default template for PDM package"
authors = [
    {name = "Reza (Shahin) Khanipour", email = "shahin@DataChef.co"},
]
dependencies = [
    "copier>=9.3.1",
]
requires-python = ">=3.11.0"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]

[tool.pdm]
distribution = false
path = "src/inception/__init__.py"

[tool.pdm.version]
source = "scm"

[tool.pdm.dev-dependencies]
dev = [
    "Commitizen>=3.28.0",
    "pdbpp>=0.10.3",
]
[tool.commitizen]
version = "1.0.0"
update_changelog_on_bump = true
version_provider = "scm"
tag_format = "v$major.$minor.$patch$prerelease"
version_files = [
    "src/inception/__init__.py"
]