[project]
name = "inception"
version = "0.1.0"
description = "DataChef's project kickstarter! Reproducible, Declarative and Reliable development environments."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "copier>=9.7.1",
]

[dependency-groups]
dev = [
    "commitizen>=4.6.0",
    "pdbpp>=0.11.6",
    "python-lsp-server>=1.12.2",
    "ruff>=0.11.7",
]
